--- a/index.html
+++ b/index.html
@@ -361,15 +361,14 @@
               mahasiswa bernama Dastra.
             </p>
             <div class="social">
-              <a href="https://facebook.com/coding.np"
+              <a href="https://web.facebook.com/dede.ardisaputra.52"
                 ><span class="fab fa-facebook-f"></span
               ></a>
-              <a href="#"><span class="fab fa-twitter"></span></a>
-              <a href="https://instagram.com/coding.np"
+              <a href="https://www.instagram.com/dastra_fun01"
                 ><span class="fab fa-instagram"></span
               ></a>
-              <a href="https://youtube.com/c/codingnepal"
-                ><span class="fab fa-youtube"></span
+              <a href="https://www.tiktok.com/@hazelnut_177?_t=8iw7wOwdmvC&_r=1"
+                ><span class="fab fa-tiktok"></span
               ></a>
             </div>
           </div>
